# ChangeLog for dev-perl/File-Remove
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Remove/ChangeLog,v 1.34 2006/11/06 15:32:45 mcummings Exp $

*File-Remove-0.33 (06 Nov 2006)

  06 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  +File-Remove-0.33.ebuild:
  Version bump

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  File-Remove-0.31.ebuild:
  Adding perl dep; fixed DEPEND

  04 Jul 2006; Christian Hartmann <ian@gentoo.org> File-Remove-0.31.ebuild:
  Fixed RDEPEND wrt bug #134781

  02 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  -File-Remove-0.30.ebuild, File-Remove-0.31.ebuild:
  Marking stable amd64

  28 May 2006; Bryan Østergaard <kloeri@gentoo.org>
  File-Remove-0.31.ebuild:
  Stable on alpha.

  31 Mar 2006; Michael Hanselmann <hansmi@gentoo.org>
  File-Remove-0.31.ebuild:
  Stable on ppc.

  28 Mar 2006; Aron Griffis <agriffis@gentoo.org> File-Remove-0.31.ebuild:
  Mark 0.31 stable on ia64

  27 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  File-Remove-0.31.ebuild:
  Stable on hppa

  27 Mar 2006; Markus Rothe <corsair@gentoo.org> File-Remove-0.31.ebuild:
  Stable on ppc64

  26 Mar 2006; Michael Cummings <mcummings@gentoo.org>
  File-Remove-0.31.ebuild:
  60+ days, marking stable for sparc and x86

  03 Mar 2006; Chris White <chriswhite@gentoo.org> -File-Remove-0.20.ebuild,
  -File-Remove-0.21.ebuild, -File-Remove-0.29.ebuild,
  File-Remove-0.30.ebuild:
  Removed old versions and 0.30 to amd64 stable.

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org>
  File-Remove-0.21.ebuild, File-Remove-0.29.ebuild, File-Remove-0.30.ebuild,
  File-Remove-0.31.ebuild:
  Virtuals for perl-core

  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> File-Remove-0.30.ebuild:
  Mark 0.30 stable on ia64

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> File-Remove-0.30.ebuild:
  Mark 0.30 stable on alpha

  21 Jan 2006; Markus Rothe <corsair@gentoo.org> File-Remove-0.30.ebuild: