@@ -1,0 +1,19 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Remove/File-Remove-0.34.ebuild,v 1.1 2006/11/07 13:05:53 mcummings Exp $
+
+inherit perl-module
+
+DESCRIPTION="Remove files and directories"
+SRC_URI="mirror://cpan/authors/id/A/AD/ADAMK/${P}.tar.gz"
+HOMEPAGE="http://search.cpan.org/~adamk/"
+
+SLOT="0"
+LICENSE="|| ( Artistic GPL-2 )"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86"
+IUSE=""
+
+SRC_TEST="do"
+
+DEPEND=">=virtual/perl-File-Spec-0.84
+	dev-lang/perl"
