@@ -1,0 +1,3 @@
+MD5 91d2a50209c0cf070e26e407b888b3d4 File-Remove-0.34.tar.gz 14067
+RMD160 3c697f54c1dd7581420149af4ddccba6364f0e67 File-Remove-0.34.tar.gz 14067
+SHA256 e9f100dbe9d8f91161d6644f3b92133ea3787c77ab0ab73d15f897c0ece1d74e File-Remove-0.34.tar.gz 14067
