@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/File-Remove
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Remove/ChangeLog,v 1.34 2006/11/06 15:32:45 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Remove/ChangeLog,v 1.35 2006/11/07 13:05:53 mcummings Exp $
+
+*File-Remove-0.34 (07 Nov 2006)
+
+  07 Nov 2006; Michael Cummings <mcummings@gentoo.org>
+  -File-Remove-0.33.ebuild, +File-Remove-0.34.ebuild:
+  Version bump with fixes for tests
 
 *File-Remove-0.33 (06 Nov 2006)
 
